; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/access/heap/extr_heapam.c_test_lockmode_for_conflict.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/access/heap/extr_heapam.c_test_lockmode_for_conflict.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { %struct.TYPE_5__*, i32 }
%struct.TYPE_5__ = type { i32 }

@TM_SelfModified = common dso_local global i32 0, align 4
@TM_Ok = common dso_local global i32 0, align 4
@TM_Updated = common dso_local global i32 0, align 4
@TM_Deleted = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32, i32, %struct.TYPE_4__*, i32*)* @test_lockmode_for_conflict to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @test_lockmode_for_conflict(i32 %0, i32 %1, i32 %2, %struct.TYPE_4__* %3, i32* %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca %struct.TYPE_4__*, align 8
  %11 = alloca i32*, align 8
  %12 = alloca i32, align 4
  store i32 %0, i32* %7, align 4
  store i32 %1, i32* %8, align 4
  store i32 %2, i32* %9, align 4
  store %struct.TYPE_4__* %3, %struct.TYPE_4__** %10, align 8
  store i32* %4, i32** %11, align 8
  %13 = load i32*, i32** %11, align 8
  store i32 0, i32* %13, align 4
  %14 = load i32, i32* %9, align 4
  %15 = call i32 @get_mxact_status_for_lock(i32 %14, i32 0)
  store i32 %15, i32* %12, align 4
  %16 = load i32, i32* %8, align 4
  %17 = call i64 @TransactionIdIsCurrentTransactionId(i32 %16)
  %18 = icmp ne i64 %17, 0
  br i1 %18, label %19, label %21

19:                                               ; preds = %5
  %20 = load i32, i32* @TM_SelfModified, align 4
  store i32 %20, i32* %6, align 4
  br label %85

21:                                               ; preds = %5
  %22 = load i32, i32* %8, align 4
  %23 = call i64 @TransactionIdIsInProgress(i32 %22)
  %24 = icmp ne i64 %23, 0
  br i1 %24, label %25, label %36

25:                                               ; preds = %21
  %26 = load i32, i32* %7, align 4
  %27 = call i32 @LOCKMODE_from_mxstatus(i32 %26)
  %28 = load i32, i32* %12, align 4
  %29 = call i32 @LOCKMODE_from_mxstatus(i32 %28)
  %30 = call i64 @DoLockModesConflict(i32 %27, i32 %29)
  %31 = icmp ne i64 %30, 0
  br i1 %31, label %32, label %34

32:                                               ; preds = %25
  %33 = load i32*, i32** %11, align 8
  store i32 1, i32* %33, align 4
  br label %34

34:                                               ; preds = %32, %25
  %35 = load i32, i32* @TM_Ok, align 4
  store i32 %35, i32* %6, align 4
  br label %85

36:                                               ; preds = %21
  %37 = load i32, i32* %8, align 4
  %38 = call i64 @TransactionIdDidAbort(i32 %37)
  %39 = icmp ne i64 %38, 0
  br i1 %39, label %40, label %42

40:                                               ; preds = %36
  %41 = load i32, i32* @TM_Ok, align 4
  store i32 %41, i32* %6, align 4
  br label %85

42:                                               ; preds = %36
  %43 = load i32, i32* %8, align 4
  %44 = call i64 @TransactionIdDidCommit(i32 %43)
  %45 = icmp ne i64 %44, 0
  br i1 %45, label %46, label %80

46:                                               ; preds = %42
  %47 = load i32, i32* %7, align 4
  %48 = call i32 @ISUPDATE_from_mxstatus(i32 %47)
  %49 = icmp ne i32 %48, 0
  br i1 %49, label %52, label %50

50:                                               ; preds = %46
  %51 = load i32, i32* @TM_Ok, align 4
  store i32 %51, i32* %6, align 4
  br label %85

52:                                               ; preds = %46
  %53 = load i32, i32* %7, align 4
  %54 = call i32 @LOCKMODE_from_mxstatus(i32 %53)
  %55 = load i32, i32* %12, align 4
  %56 = call i32 @LOCKMODE_from_mxstatus(i32 %55)
  %57 = call i64 @DoLockModesConflict(i32 %54, i32 %56)
  %58 = icmp ne i64 %57, 0
  br i1 %58, label %59, label %78

59:                                               ; preds = %52
  %60 = load %struct.TYPE_4__*, %struct.TYPE_4__** %10, align 8
  %61 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %60, i32 0, i32 1
  %62 = load %struct.TYPE_4__*, %struct.TYPE_4__** %10, align 8
  %63 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %62, i32 0, i32 0
  %64 = load %struct.TYPE_5__*, %struct.TYPE_5__** %63, align 8
  %65 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %64, i32 0, i32 0
  %66 = call i32 @ItemPointerEquals(i32* %61, i32* %65)
  %67 = icmp ne i32 %66, 0
  br i1 %67, label %68, label %74

68:                                               ; preds = %59
  %69 = load %struct.TYPE_4__*, %struct.TYPE_4__** %10, align 8
  %70 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %69, i32 0, i32 0
  %71 = load %struct.TYPE_5__*, %struct.TYPE_5__** %70, align 8
  %72 = call i64 @HeapTupleHeaderIndicatesMovedPartitions(%struct.TYPE_5__* %71)
  %73 = icmp ne i64 %72, 0
  br i1 %73, label %74, label %76

74:                                               ; preds = %68, %59
  %75 = load i32, i32* @TM_Updated, align 4
  store i32 %75, i32* %6, align 4
  br label %85

76:                                               ; preds = %68
  %77 = load i32, i32* @TM_Deleted, align 4
  store i32 %77, i32* %6, align 4
  br label %85

78:                                               ; preds = %52
  %79 = load i32, i32* @TM_Ok, align 4
  store i32 %79, i32* %6, align 4
  br label %85

80:                                               ; preds = %42
  br label %81

81:                                               ; preds = %80
  br label %82

82:                                               ; preds = %81
  br label %83

83:                                               ; preds = %82
  %84 = load i32, i32* @TM_Ok, align 4
  store i32 %84, i32* %6, align 4
  br label %85

85:                                               ; preds = %83, %78, %76, %74, %50, %40, %34, %19
  %86 = load i32, i32* %6, align 4
  ret i32 %86
}

declare dso_local i32 @get_mxact_status_for_lock(i32, i32) #1

declare dso_local i64 @TransactionIdIsCurrentTransactionId(i32) #1

declare dso_local i64 @TransactionIdIsInProgress(i32) #1

declare dso_local i64 @DoLockModesConflict(i32, i32) #1

declare dso_local i32 @LOCKMODE_from_mxstatus(i32) #1

declare dso_local i64 @TransactionIdDidAbort(i32) #1

declare dso_local i64 @TransactionIdDidCommit(i32) #1

declare dso_local i32 @ISUPDATE_from_mxstatus(i32) #1

declare dso_local i32 @ItemPointerEquals(i32*, i32*) #1

declare dso_local i64 @HeapTupleHeaderIndicatesMovedPartitions(%struct.TYPE_5__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
